--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.6.0",
     "typescript": "4.9.3"
   }
 }
