--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "groq": "^2.33.2",
     "next": "13.0.3",
     "next-sanity": "^2.0.1",
     "react": "18.2.0",
