--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.44.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "groq": "^2.33.2",
-    "next": "13.0.3",
+    "next": "^13.0.3",
     "next-sanity": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
+    "stripe": "^11.1.0",
     "typescript": "4.9.3"
   }
 }
