--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "canvas-confetti": "^1.6.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "groq": "^2.33.2",
