--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "groq": "^2.33.2",
+    "mysql2": "^3.2.1",
     "next": "^13.0.5",
     "next-sanity": "^2.0.1",
     "react": "18.2.0",
